--- a/uk.ac.diamond.sda.navigator.test/build.properties
+++ b/uk.ac.diamond.sda.navigator.test/build.properties
@@ -1,7 +1,8 @@
 source.. = test/
 output.. = bin/
 bin.includes = META-INF/,\
-               .
+               .,\
+               testFiles/
 javacDefaultEncoding.. = UTF-8
 javacSource = 1.6
 javacTarget = 1.6
