--- a/uk.ac.diamond.sda.navigator/plugin.xml
+++ b/uk.ac.diamond.sda.navigator/plugin.xml
@@ -412,6 +412,17 @@
                tooltip="Refresh file tree">
          </command>
       </menuContribution>
+      <menuContribution
+            allPopups="false"
+            locationURI="toolbar:org.eclipse.ui.navigator.ProjectExplorer">
+         <command
+               commandId="uk.ac.diamond.sda.navigator.ReUseEditor"
+               icon="icons/clone_el.gif"
+               label="Re-use editor"
+               style="toggle"
+               tooltip="Re-use editor">
+         </command>
+      </menuContribution>
    </extension>
    <extension
          point="org.eclipse.ui.commands">
@@ -429,6 +440,13 @@
             defaultHandler="uk.ac.diamond.sda.navigator.views.RefreshHandler"
             id="uk.ac.diamond.sda.navigator.refresh"
             name="Refresh">
+      </command>
+      <command
+            defaultHandler="uk.ac.diamond.sda.navigator.actions.ReUseEditorHandler"
+            id="uk.ac.diamond.sda.navigator.ReUseEditor"
+            name="Re-use Editor">
+            <state class="org.eclipse.jface.commands.ToggleState"
+               id="STYLE"/>
       </command>
    </extension>
    <extension
