--- a/uk.ac.diamond.sda.meta/plugin.xml
+++ b/uk.ac.diamond.sda.meta/plugin.xml
@@ -27,7 +27,7 @@
             supportedMetadata="uk.ac.diamond.sda.meta.discriminator.DiffractionMetadataDiscriminator">
       </client>
       <client
-            class="uk.ac.diamond.sda.meta.page.HeaderTablePage"
+            class="uk.ac.diamond.sda.meta.page.MetadataTablePage"
             icon="icons/header_table.gif"
             name="Header"
             supportedMetadata="uk.ac.diamond.sda.meta.discriminator.MetadataDiscriminator">
