SCISOFT - branding: add 16x16 and 32x32 SDA window icons. Licensing update and text with copyright and contact mail in About section.

--- a/uk.ac.diamond.scisoft/build.properties
+++ b/uk.ac.diamond.scisoft/build.properties
@@ -5,6 +5,8 @@ bin.includes = META-INF/,\
                plugin.xml,\
                plugin_customization.ini,\
                icons/,\
+               icons/sda_icon_32x32.png,\
+               icons/sda_icon_16x16.png,\
                splash.bmp,\
                logging/
 javacDefaultEncoding.. = UTF-8
@@ -12,4 +14,6 @@ javacSource = 1.6
 javacTarget = 1.6
 javacProjectSettings=true
 src.includes = splash.bmp,\
-               icons/
+               icons/,\
+               icons/sda_icon_32x32.png,\
+               icons/sda_icon_16x16.png
