--- a/uk.ac.diamond.sda.navigator/plugin.xml
+++ b/uk.ac.diamond.sda.navigator/plugin.xml
@@ -442,10 +442,11 @@
             name="Refresh">
       </command>
       <command
+            defaultHandler="uk.ac.diamond.sda.navigator.actions.ReUseEditorHandler"
             id="uk.ac.diamond.sda.navigator.ReUseEditor"
             name="Re-use Editor">
-            <state class="org.eclipse.jface.commands.ToggleState"
-               id="STYLE"/>
+            <state class="org.eclipse.ui.handlers.RegistryToggleState:true"
+               id="org.eclipse.ui.commands.toggleState"/>
       </command>
    </extension>
    <extension
@@ -468,12 +469,5 @@
             id="uk.ac.diamond.sda.navigator.project.explorer.decorators.cheatsheet"
             name="Project Explorer File Decorators">
       </cheatsheet>
-   </extension>
-   <extension
-         point="org.eclipse.ui.handlers">
-      <handler
-            class="uk.ac.diamond.sda.navigator.actions.ReUseEditorHandler"
-            commandId="uk.ac.diamond.sda.navigator.ReUseEditor">
-      </handler>
    </extension>
 </plugin>
