--- a/uk.ac.diamond.sda.exporter/build.properties
+++ b/uk.ac.diamond.sda.exporter/build.properties
@@ -5,3 +5,7 @@ bin.includes = plugin.xml,\
                .,\
                icons/,\
                contexts.xml
+javacDefaultEncoding.. = UTF-8
+javacSource = 1.6
+javacTarget = 1.6
+javacProjectSettings = true
