--- a/uk.ac.diamond.sda.meta/plugin.xml
+++ b/uk.ac.diamond.sda.meta/plugin.xml
@@ -12,7 +12,7 @@
       <view
             category="uk.ac.diamond.sda.meta.category"
             class="uk.ac.diamond.sda.meta.views.MetadataPageView"
-            icon="icons/DiffractionIcon.png"
+            icon="icons/diffraction-meta.png"
             id="uk.ac.diamond.sda.meta.MetadataPageView"
             name="Metadata View"
             restorable="true">
@@ -22,7 +22,7 @@
          point="uk.ac.diamond.sda.meta.metadataPageRegister">
       <client
             class="uk.ac.diamond.sda.meta.page.DiffractionMetadataComposite"
-            icon="icons/DiffractionIcon.png"
+            icon="icons/diffraction-meta.png"
             name="Diffraction Metadata"
             supportedMetadata="uk.ac.diamond.sda.meta.discriminator.DiffractionMetadataDiscriminator">
       </client>
