SCISOFT-UI: multi editor - set default to false so the toggle button is not ON when the SDA is started in clean mode.

--- a/uk.ac.diamond.sda.navigator/plugin.xml
+++ b/uk.ac.diamond.sda.navigator/plugin.xml
@@ -446,7 +446,7 @@
             description="Enable/disable multi-editor use"
             id="uk.ac.diamond.sda.navigator.ReUseEditor"
             name="Re-use Editor">
-            <state class="org.eclipse.ui.handlers.RegistryToggleState:true"
+            <state class="org.eclipse.ui.handlers.RegistryToggleState:false"
                id="org.eclipse.ui.commands.toggleState"/>
       </command>
    </extension>
