Clean up project dependencies and references

--- a/uk.ac.diamond.scisoft.analysis.rcp/.project
+++ b/uk.ac.diamond.scisoft.analysis.rcp/.project
@@ -3,7 +3,7 @@
 	<name>uk.ac.diamond.scisoft.analysis.rcp</name>
 	<comment></comment>
 	<projects>
-		<project>ncsa.hdf</project>
+		<project>org.dawb.hdf5</project>
 		<project>tp</project>
 		<project>uk.ac.diamond.scisoft.analysis</project>
 		<project>uk.ac.gda.common</project>
