--- a/uk.ac.diamond.sda.polling/plugin.xml
+++ b/uk.ac.diamond.sda.polling/plugin.xml
@@ -45,6 +45,12 @@
             id="uk.ac.diamond.sda.polling.browserupdate"
             name="Browser Update">
       </PollJob>
+      <PollJob
+            class="uk.ac.diamond.sda.polling.jobs.WebBrowserCycleUpdate"
+            example_config_text="Class=uk.ac.diamond.sda.polling.jobs.WebBrowserCycleUpdate\nPollTime=3.0\nFileName=/tmp/test.txt\nURLViewName=Plot 2\nMaxPagesToCycle=4"
+            id="uk.ac.diamond.sda.polling.browsercycleupdate"
+            name="Browser Cycle Update">
+      </PollJob>
    </extension>
    <extension
          point="org.eclipse.ui.preferencePages">
