--- a/uk.ac.diamond.sda.navigator/plugin.xml
+++ b/uk.ac.diamond.sda.navigator/plugin.xml
@@ -14,7 +14,7 @@
             class="org.eclipse.ui.navigator.CommonNavigator"
             icon="icons/nav.png"
             id="uk.ac.diamond.sda.navigator.view"
-            name="SDA Navigator"/>
+            name="DAWN Navigator"/>
       <view
             category="uk.ac.diamond.scisoft.analysis.rcp"
             class="uk.ac.diamond.sda.navigator.views.FileView"
