SCISOFT-UI: Add scisoftpy to the python path for new interpreters
Use new method of contributing to new interpreters.

PyDev (currently Diamond branch) has new method for adding additional
settings to new InterpreterInfos when they are created in the UI.

This method is less complicated (from the Diamond side) than using
IInterpreterObserver.

--- a/uk.ac.diamond.scisoft/plugin.xml
+++ b/uk.ac.diamond.scisoft/plugin.xml
@@ -36,4 +36,11 @@
             class="uk.ac.diamond.scisoft.JythonCreator">
       </startup>
    </extension>
+   <extension
+         point="org.python.pydev.pydev_interpreter_new_custom_entries">
+      <interpreter_new_custom_entries_participant
+            class="uk.ac.diamond.scisoft.PyDevAdditionalInterpreterSettings">
+      </interpreter_new_custom_entries_participant>
+   </extension>
+   
 </plugin>
