Fixed issues brought up in Cheatsheet testing

--- a/uk.ac.diamond.scisoft.analysis.polling/build.properties
+++ b/uk.ac.diamond.scisoft.analysis.polling/build.properties
@@ -3,7 +3,8 @@ output.. = bin/
 bin.includes = META-INF/,\
                .,\
                plugin.xml,\
-               cheat/
+               cheat/,\
+               icons/
 javacDefaultEncoding.. = UTF-8
 javacSource = 1.6
 javacTarget = 1.6
