--- a/uk.ac.diamond.scisoft.rp/build.properties
+++ b/uk.ac.diamond.scisoft.rp/build.properties
@@ -1,5 +1,8 @@
 source.. = src/
 output.. = bin/
 bin.includes = plugin.xml,\
-               META-INF/,\               
+               META-INF/,\
+               ,\
+               icons/,\
+               cheat/
 
